8053902: Fix for 8030115 breaks build on Windows and Solaris

Move variable definition to top of function

Reviewed-by: prr